[package]
name = "resizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
[dependencies]
axum = "0.6.20"
base64 = "0.21.5"
hyper = "0.14.27"
image = "0.24.7"
reqwest = { version = "0.11", features = ["blocking"] }
resize = "0.8.2"
serde_json = "1.0.108"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.3.33", features = ["full"] }
anyhow = "1.0.75"
